namespaces.yml
apiVersion: v1
kind: Namespace
metadata:
  name: dc1
  labels:
    dc: "1"

---
apiVersion: v1
kind: Namespace
metadata:
  name: dc2
  labels:
    dc: "2"
